--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start-local": "ng serve --proxy-config proxy.local.conf.json",
-    "start-dev": "ng serve -H 0.0.0.0 --proxy-config proxy.conf.json",
+    "start": "ng serve -H 0.0.0.0 --proxy-config proxy.conf.json",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor"
